add functionality basket

--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,6 @@
     <div id="root"></div>
     <div id="modalLogin"></div>
     <div id="modalRegistration"></div>
+    <div id="modalBasket"></div>
   </body>
 </html>
